<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/student_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:minHeight="100dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/student_welcome">

        <EditText
            android:id="@+id/courseCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="Course Code "
            android:inputType="text"
            android:minHeight="50dp" />

        <EditText
            android:id="@+id/courseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="20"
            android:hint="Course Name"
            android:inputType="text"
            android:minHeight="50dp" />

        <EditText
            android:id="@+id/Day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="20"
            android:hint="Search by Day"
            android:inputType="text"
            android:minHeight="50dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_layout">

        <Button
            android:id="@+id/all_courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="@string/display_all_courses" />

        <Button
            android:id="@+id/my_courses"
            android:layout_width="match_parent"
            android:minHeight="50dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/display_my_courses" />

        <Button
            android:id="@+id/Find"
            android:layout_width="match_parent"
            android:minHeight="50dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/Find" />

        <Button
            android:id="@+id/enroll"
            android:layout_marginTop="5dp"
            android:minHeight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enroll" />

        <Button
            android:id="@+id/unenroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#AE0808"
            android:text="@string/unenroll" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/button_layout"
        tools:layout_editor_absoluteX="20dp">

        <ListView
            android:id="@+id/view_list_courses"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>